--- a/index.html
+++ b/index.html
@@ -271,16 +271,40 @@
         <div id="carouselPortfolio5" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="images/logo.jpg" alt="slide">
-            </div>
-            <div class="carousel-item">
               <img class="d-block w-100" src="images/logo02.jpg" alt="slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/infografika.jpg" alt="slide">
+              <img class="d-block w-100" src="images/kobiniek.jpg" alt="slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/kobiniek.jpg" alt="slide">
+              <img class="d-block w-100" src="images/projects1.jpg" alt="slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="images/projects2.jpg" alt="slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="images/projects3.jpg" alt="slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="images/projects4.jpg" alt="slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="images/projects5.jpg" alt="slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="images/projects6.jpg" alt="slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="images/projects7.jpg" alt="slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="images/projects8.png" alt="slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="images/projects9.jpg" alt="slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="images/infografika.jpg" alt="slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselPortfolio5" role="button" data-slide="prev">
@@ -335,7 +359,7 @@
       </div>
       <div class="description">
         <h1>Websites</h1>
-        <p></p>
+        <p><a href="https://github.com/niealeksandra" target="blank">www.github.com/niealeksandra</a></p>
       </div>
 
     </div>
@@ -381,7 +405,8 @@
         <div class="modal-body">
           <p><a href="tel:+48796573792">+48 796573792</a></p>
           <p><a href="mailto:aleksandraa.szwedo@gmail.com">aleksandraa.szwedo@gmail.com</a></p>
-          <p><a href="linkedin.com/in/aleksandra-sn00/">LinkedIn</a></p>
+          <p><a href="linkedin.com/in/aleksandra-sn00/" target="blank">LinkedIn</a></p>
+          <p><a href="https://github.com/niealeksandra" target="blank">Github</a></p>
           <p>based in Cracow</p>
         </div>
         <div class="modal-footer">
